# gello_software

./: .gitignore  README.md  commands.md  commands.txt  pyproject.toml  test_depthai_v3.py
.github/instructions/: calibration_system.md  project.instructions.md
configs/: yam_auto_generated.yaml  yam_auto_generated_right.yaml  yam_auto_generated_sim_left.yaml  yam_auto_generated_sim_right.yaml  yam_left.yaml  yam_right.yaml
experiments/: README_calibration.md  capture_calibration_poses.py  replay_calibration_poses.py
gello/agents/: gello_agent.py
gello/cameras/: oak_camera.py
gello/dynamixel/: driver.py
gello/utils/: calibration_utils.py
scripts/: calculate_camera_extrinsics.py  calibrate_intrinsics.py  cleanup_h5.py  generate_yam_config.py
